Move Dockerfile to docker directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ build_image:
       --pull \
       --provenance=false \
       --push \
+      --file docker/Dockerfile \
       .
   after_script:
     - docker logout $CI_REGISTRY
